107 ==> 391330 - Albums view does not display icons on kubuntu 18.04 beta.
108 ==> 402729 - Discard/Work/Keep labels not displayed.
109 ==> 383081 - Locate the picture in the file explorer (Windows).
110 ==> 403626 - Sort items.
111 ==> 375024 - Edits are saved with file names ending _1 not v1 - not recognized as new version.
112 ==> 408017 - Thumbnails disappear after workflow initiated.
113 ==> 400669 - Lost synchronisation with database with pictures on NAS.
114 ==> 392088 - digiKam loses DB content after power saving mode of Win10.
115 ==> 401338 - All images lost from albums when connection to network share is lost.
116 ==> 405954 - "slotSolidDeviceChanged" messages forever after plugging in/out USB drive.
117 ==> 381386 - Failed to update the database schema from version 7 to version 8.
118 ==> 389677 - digiKam fails to migrate database schema from version 8 to version 9.
119 ==> 391340 - Mysql Migration fails (makeUpdates 8 to 9).
120 ==> 391720 - Metadata (tags) is not updated after being edited externally.
121 ==> 338560 - digiKam for Windows won't resize images.
122 ==> 289300 - Writing metadata control panel in configuration dialog.
123 ==> 346097 - when tagging a face it hangs or will no longer load pictures from thumbnail.
124 ==> 365919 - Slideshow does not show any more than the first slide.
125 ==> 365942 - Going to full screen mode when window is maximized messes up window settings and hides menu bar.
126 ==> 370440 - KML Export fails when destination directory partition differs then the temp directory partition.
127 ==> 235593 - can not open nef files with ufraw through digiKam.
128 ==> 372096 - Keyboard Shortcut for NEW FaceTagging.
129 ==> 374785 - Controls on preview window are difficult to see over some images.
130 ==> 376427 - Range selection in thumbnail view gets wrong endpoint.
131 ==> 376627 - Face Tag Filter List Disappears On Even Number Key Presses.
132 ==>