@@ -144,4 +144,5 @@ BUGFIXES:
 129 ==> 374785 - Controls on preview window are difficult to see over some images.
 130 ==> 376427 - Range selection in thumbnail view gets wrong endpoint.
 131 ==> 376627 - Face Tag Filter List Disappears On Even Number Key Presses.
-132 ==>
+132 ==> 409839 - Google Photos import does not download videos correctly.
+133 ==> 
